Add OscarLanguage, not working, JPMS issues