@@ -55,20 +55,12 @@
             <configuration>
                <source>17</source>
                <target>17</target>
-               <compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
             </configuration>
          </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M6</version>
-            <configuration>
-               <argLine>
-                  --add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED
-                  --add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
-                  --add-exports org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED
-               </argLine>
-            </configuration>
             <executions>
                <execution>
                   <id>surefire-test</id>
